# pact-sse-plugin

./: .gitignore  Cargo.toml  README.md  build.rs  pact-plugin.json  release.sh
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/sse-consumer/: Cargo.toml
examples/sse-consumer-rust/: Cargo.toml
examples/sse-consumer/src/: lib.rs
examples/sse-provider/: Cargo.toml
examples/sse-provider/src/: main.rs
src/: lib.rs  main.rs  parser.rs  proto.rs  sse_content.rs  utils.rs
tests/: integration_tests.rs  unit_tests.rs
