[package]
name = "pact-sse-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10.1"
maplit = "1.0.2"
pact_matching = "~1.1.9"
pact_models = "~1.1.17"
serde_json = "1.0.108"
bytes = { version = "1", features = ["serde"] }
anyhow = "1.0.75"
hyper = "0.14"
http = "0.2"
regex = "1.10"

[build-dependencies]
tonic-build = "0.10.2"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
