[package]
name = "sse-consumer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["stream"] }
anyhow = "1.0.86"

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.3"
pact_models = "1.2.2"
pact_consumer = "~1.2.3"
serde_json = "1.0.120"
regex = "1.10.5"
fakeit = "1.2.0"
rand = "0.8.5"
test-log = "0.2.16"
